# congreso_back

./: pyproject.toml
congreso/: manage.py  pytest.ini
congreso/congreso/: asgi.py  settings.py  urls.py  wsgi.py
congreso/inscripciones/: admin.py  factory.py  models.py  tests.py  urls.py  utils.py  views.py
congreso/inscripciones/migrations/: 0001_initial.py  0002_auto_20211109_1154.py  0003_auto_20211109_1156.py  0004_rename_sector_lab_inscripcion_sector_laboral.py  0005_auto_20211109_1252.py  0006_auto_20211109_1254.py  0007_inscripcion_emprendedor_sector.py  0008_alter_inscripcion_dni.py  0009_alter_inscripcion_sector_laboral.py  0010_auto_20211115_0032.py  0011_inscripcion_fecha_inscripcion_comunidad_lsa.py  0012_inscripcion_en_plazo.py  0013_alter_inscripcion_educativo_sector.py  0014_alter_inscripcion_estado_inscripcion.py  0015_auto_20211129_1027.py  0016_alter_inscripcion_dni.py  0017_auto_20211202_1307.py
congreso/mailapp/: admin.py  apps.py  factory.py  models.py  urls.py  utils.py  views.py
congreso/mailapp/fixtures/: plantillas.json
congreso/mailapp/migrations/: 0002_alter_plantilla_id.py  0003_alter_plantilla_body_content.py  0004_plantilla_identificador.py
congreso/mailapp/templates/: select_template.html  send_report.html
